--- a/recipes/kung-pao-chicken.html
+++ b/recipes/kung-pao-chicken.html
@@ -8,5 +8,29 @@
 </head>
 <body>
     <h1>Kung Pao Chicken</h1>
+    <img src="../images/kung-pao.jpg" alt="recipe picture">
+    <h2>Description</h2>
+    <p>Spicy chicken with peanuts, similar to what is served in Chinese restaurants. It is easy to make, and you can be as sloppy with the measurements as you want. They reduce to a nice, thick sauce. Substitute cashews for peanuts, or bamboo shoots for the water chestnuts. You can't go wrong! Enjoy! </p>
+    <h3>Ingredients for 2 servings</h3>
+    <ul>
+        <li>½ pound skinless, boneless chicken breast halves - cut into chunks</li>
+        <li>1 tablespoon white wine</li>
+        <li>1 tablespoon soy sauce</li>
+        <li>1 tablespoon sesame oil, divided</li>
+        <li>1 tablespoon cornstarch, dissolved in 2 tablespoons water</li>
+        <li>½ ounce hot chile paste</li>
+        <li>½ teaspoon distilled white vinegar</li>
+        <li>1 teaspoons brown sugar</li>
+        <li>2 green onions, chopped</li>
+        <li>½ tablespoon chopped garlic</li>
+        <li>½ (8 ounce) can water chestnuts</li>
+        <li>2 ounces chopped peanuts</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>To Make Marinade: Combine 1 tablespoon wine, 1 tablespoon soy sauce, 1 tablespoon oil and 1 tablespoon cornstarch/water mixture and mix together. Place chicken pieces in a glass dish or bowl and add marinade. Toss to coat. Cover dish and place in refrigerator for about 30 minutes.</li>
+        <li>To Make Sauce: In a small bowl combine 1 tablespoon wine, 1 tablespoon soy sauce, 1 tablespoon oil, 1 tablespoon cornstarch/water mixture, chili paste, vinegar and sugar. Mix together and add green onion, garlic, water chestnuts and peanuts. In a medium skillet, heat sauce slowly until aromatic.</li>
+        <li>Meanwhile, remove chicken from marinade and saute in a large skillet until meat is white and juices run clear. When sauce is aromatic, add sauteed chicken to it and let simmer together until sauce thickens.</li>
+    </ol>
 </body>
 </html>
