--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/kung-pao-chicken.html">Kung Pao Chicken</a>
+    <ul>   
+        <li> <a href="./recipes/kung-pao-chicken.html">Kung Pao Chicken</a></li>
+        <li><a href="./recipes/tortilla-espanola.html">Tortilla Española</a></li>
+    </ul>
 </body>
 </html>
