--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>   
         <li> <a href="./recipes/kung-pao-chicken.html">Kung Pao Chicken</a></li>
         <li><a href="./recipes/tortilla-espanola.html">Tortilla Española</a></li>
+        <li><a href="./recipes/eggs.html">Simple Delived Eggs</a></li>
     </ul>
 </body>
 </html>
