--- a/recipes/tortilla-espanola.html
+++ b/recipes/tortilla-espanola.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Tortilla Española</h1>
-    <img src="../images/torilla.jpg" alt="tortilla picture">
+    <img src="../images/tortilla.jpg" alt="tortilla picture">
     <h2>Description</h2>
     <p>Unlike most omelets, a Spanish tortilla is served at room temperature. It is the classic tapa, prepared all over Spain.</p>
     <h3>Ingredients</h3>
